# slatecontroller

./: .env.example  .gitignore  AUDIT_2026-06-23.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 08d38c7b0ee4_add_devices_device_secrets.py  281b831b96da_cyberpunk_slug_alignment.py  52a0651d75ac_add_attack_path_enrichment.py  5a25e3e7439a_add_app_secrets.py  8d2cdb323bcd_add_cve_exploit_cache.py  a1d7f3b52e89_ssid_network_binding_to_profile.py  a3f7e9c12b04_add_profile_wallpapers.py  a4f3d29b8c01_move_ssh_keypair_back_to_app_secrets.py  a8b3c2d10e44_network_isolation_refactor.py  b2c4d68e90f1_split_admin_access_per_service.py  b7e4f1a23c08_radio_configs_and_threat_events.py  b8d0e2f314c5_wallpaper_kind_fit_mode.py  bd99f2f46f24_add_risk_acceptances.py  c1d8a4f25b3e_scan_history_and_wigle_cache.py  c7e1f942d0a5_wifi_multi_band.py  (+35 more)
backend/app/: __init__.py  auth.py  config.py  exceptions.py  main.py
backend/data/: ssid_suggestions.yaml
backend/profiles/: home.yaml  lockdown.yaml  mission.yaml  osint.yaml  vacances.yaml
backend/scripts/: probe_api_methods.py  probe_api_surface.py  probe_login.py  probe_login_manual.py  probe_pyglinet_trace.py  probe_slate.py  probe_uci.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_profiles.py  test_profiles_routes.py  test_profiles_scoring.py  test_proton_auth.py  test_slate.py  test_vpn_configs_api.py  test_vpn_crypto.py  test_wg_parser.py
(+370 files in other folders)
